<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_vnlist"
            android:icon="@drawable/ic_list_black_48dp"
            android:title="@string/my_visual_novel_list"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/nav_votelist"
            android:icon="@drawable/ic_format_list_numbered_black_48dp"
            android:title="@string/my_votes"
            app:actionLayout="@layout/menu_counter"/>

        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_wishlist"
            android:title="@string/my_wishlist"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_equalizer_black_48dp"
            android:title="@string/database_statistics"/>
    </group>

    <item
        android:id="@+id/rankingTitle"
        android:title="@string/rankings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_top"
                    android:icon="@drawable/ic_star_black_48dp"
                    android:title="@string/top"/>

                <item
                    android:id="@+id/nav_popular"
                    android:icon="@drawable/ic_whatshot_black_48dp"
                    android:title="@string/popular"/>

                <item
                    android:id="@+id/nav_most_voted"
                    android:icon="@drawable/ic_trending_up_black_48dp"
                    android:title="@string/most_voted"/>

                <item
                    android:id="@+id/nav_newly_released"
                    android:icon="@drawable/ic_new_releases_black_48dp"
                    android:title="@string/newly_released"/>

                <item
                    android:id="@+id/nav_newly_added"
                    android:icon="@drawable/ic_new_releases_black_48dp"
                    android:title="@string/newly_added"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/accountTitle"
        android:title="@string/my_account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_recommendations"
                    android:icon="@drawable/ic_thumb_up_black_48dp"
                    android:title="@string/my_recommendations"/>

                <item
                    android:id="@+id/nav_preferences"
                    android:icon="@drawable/ic_settings_black_48dp"
                    android:title="@string/preferences"/>

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_help_black_48dp"
                    android:title="@string/about"/>

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_exit_to_app_black_48dp"
                    android:title="@string/logout"/>
            </group>
        </menu>
    </item>
</menu>