<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/action_filter"
        android:visible="false"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:onClick="onCreateSortMenu"
        android:title="@string/action_sort"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_rate"
        android:icon="@drawable/ic_star_white"
        android:title="@string/action_rate"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white"
        android:title="@string/action_share"
        android:visible="false"
        app:showAsAction="ifRoom"/>
</menu>
