<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sortBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/bottom_sheet_margin"
    android:layout_marginEnd="@dimen/bottom_sheet_margin"
    android:background="@drawable/bottom_sheet_background"
    android:elevation="@dimen/bottom_sheet_elevation"
    android:fillViewport="true"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:behavior_skipCollapsed="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="16dp">

        <View
            android:id="@+id/sortBottomSheetHeader"
            android:layout_width="0dp"
            android:layout_height="@dimen/bottom_sheet_peek"
            android:background="@drawable/bottom_sheet_header_background"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconClose"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="@id/sortBottomSheetHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/sortBottomSheetHeader"
            app:srcCompat="@drawable/ic_clear_white_48dp"
            app:tint="@color/transparent80White" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textSortBy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sort_vns_by"
            android:textColor="@color/transparent80White"
            app:layout_constraintBottom_toBottomOf="@id/sortBottomSheetHeader"
            app:layout_constraintEnd_toStartOf="@id/buttonReverseSort"
            app:layout_constraintStart_toEndOf="@id/iconClose"
            app:layout_constraintTop_toTopOf="@id/sortBottomSheetHeader" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonReverseSort"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginEnd="12dp"
            android:text="@string/reverse_order"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:icon="@drawable/ic_swap_vert_white_48dp"
            app:iconSize="22dp"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/sortBottomSheetHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/sortBottomSheetHeader"
            app:rippleColor="@color/white"
            app:strokeColor="@color/white" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flexboxStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            app:dividerDrawable="@drawable/flexbox_divider_8dp"
            app:flexWrap="wrap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sortBottomSheetHeader"
            app:showDividerVertical="middle">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortID"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/id"
                android:textAllCaps="false"
                android:textColor="@color/textColorPrimary"
                android:textSize="12sp"
                app:rippleColor="@color/textColorPrimary"
                app:strokeColor="@color/textColorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortReleaseDate"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/release_date"
                android:textAllCaps="false"
                android:textColor="@color/textColorPrimary"
                android:textSize="12sp"
                app:rippleColor="@color/textColorPrimary"
                app:strokeColor="@color/textColorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortLength"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/length"
                android:textAllCaps="false"
                android:textColor="@color/textColorPrimary"
                android:textSize="12sp"
                app:rippleColor="@color/textColorPrimary"
                app:strokeColor="@color/textColorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortPopularity"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/popularity"
                android:textAllCaps="false"
                android:textColor="@color/textColorPrimary"
                android:textSize="12sp"
                app:rippleColor="@color/textColorPrimary"
                app:strokeColor="@color/textColorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortRating"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/rating"
                android:textAllCaps="false"
                android:textColor="@color/textColorPrimary"
                android:textSize="12sp"
                app:rippleColor="@color/textColorPrimary"
                app:strokeColor="@color/textColorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortStatus"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/status"
                android:textAllCaps="false"
                android:textColor="@color/textColorPrimary"
                android:textSize="12sp"
                app:rippleColor="@color/textColorPrimary"
                app:strokeColor="@color/textColorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortVote"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/vote"
                android:textAllCaps="false"
                android:textColor="@color/textColorPrimary"
                android:textSize="12sp"
                app:rippleColor="@color/textColorPrimary"
                app:strokeColor="@color/textColorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSortPriority"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/priority"
                android:textAllCaps="false"
                android:textColor="@color/textColorPrimary"
                android:textSize="12sp"
                app:rippleColor="@color/textColorPrimary"
                app:strokeColor="@color/textColorPrimary" />

        </com.google.android.flexbox.FlexboxLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
