<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:visibility="visible"   android:layout_marginTop="8dp"
    android:animateLayoutChanges="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginUsernameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textColorHint="?attr/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/loginUsername"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            tools:text="Username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:hint="@string/password"
        android:paddingBottom="-20dp"
        android:textColorHint="?attr/colorAccent"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginUsernameLayout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/loginPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            tools:text="Password" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:id="@+id/passwordErrorSpacer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@id/loginPasswordLayout"
        app:layout_constraintEnd_toEndOf="@id/loginPasswordLayout"
        app:layout_constraintStart_toStartOf="@id/loginPasswordLayout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/passwordError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:textAppearance="@style/TextAppearance.Design.Error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/loginPasswordLayout"
        app:layout_constraintStart_toStartOf="@id/loginPasswordLayout"
        app:layout_constraintTop_toBottomOf="@id/passwordErrorSpacer"
        tools:text="@string/generic_error"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordError" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_text"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupText"
        app:rippleColor="?attr/colorAccent"
        app:strokeColor="?attr/colorAccent" />
</androidx.constraintlayout.widget.ConstraintLayout>