<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/yukiConsents"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/rounded_foreground"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="@id/barrierBelowText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierAboveText"
        app:srcCompat="@drawable/yuki_default" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/login_step_welcome"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/barrierBelowText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/yukiConsents"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierAboveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="yukiConsents,text" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBelowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="yukiConsents,text" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexboxLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:alignContent="center"
        app:alignItems="center"
        app:flexWrap="wrap"
        app:justifyContent="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBelowText">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/no"
            android:textAllCaps="false"
            app:backgroundTint="@color/dropped" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/yes"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMoreInfo"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/more_info"
            android:textAllCaps="false"
            app:rippleColor="?attr/colorAccent"
            app:strokeColor="?attr/colorAccent" />

    </com.google.android.flexbox.FlexboxLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
